# Aura_Full_Project.xlsl

./: .dff  .env  APIs.php  Aura.nix  Aura.rex  Aura.rexx  Aura_paperweb.py  CNAME  IETF_Operational_Vulnerability_F2332D8B.asc  Index.htmlx  Level_01.be  Makefile.txt  Package.json  README.md  README.rst  Web4app.background.api  Xlsl  asexual_mutation.py  aura.bib.txt  aura_level.berry  bash.sh  create_aura_extensions.sh  dashboard.py  global.css  hearth.py  index.html  index.khml  indexcontent.md  libwebp-1.5.0-ios-framework.tar.gz.asc  processor.php  pyproject.toml  registry-host  script.be
.docker/: bash.sh  push
.streamlit/: aura_app.py
@Khml^application.properties/: README.md
Aura.com/: ambiguous_a_v1.0.go
Aura.paperweb/: README.mDX  README.md  index.html  index.mDX  index.md  index.parquet  index.rst  paperweb_live.json
AuraLab/: index.html
Docs/: Index.md  Index.rexx  QuickStart.md  Read.md  Read.md.rss
Engine/: Bash.sh
IntelligencePlatform/: ComputeService.rb
KHML/: book.khml  browser.khml  interprete.js
Paperweb/: index.html  paperweb.py
Utils/: Build.meson
app/: Aura.swift
assets/: papercss.ss
backend/: Dockerfile  bash.sh  server.js
brain/: aura.tex  patcher.py  reflection.py
doc/: conf.md
docs/: Documents.xlsl.md
genesis/: AuraGenesisCore.py  README.md  app.py  package.json  requirements.txt
js/: lab.js
local/: oplog.rs
locall.host/: install.sh
locallhost-dev/: localbuild-app.sh
news/: document.xlsl
paper/: Pom.plist  Pom.xls
pip install openai qiskit pylatexenc/: Aura_app.py
server/: conf.cpp
(+45 files in other folders)
